sensor api update
